[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui_widgets/HUD.gd" type="Script" id=1]
[ext_resource path="res://dialogue/方正黑体简体.TTF" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 88
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -242.0
margin_right = 242.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "已坚持秒数：0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OverPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OverPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -208.58
margin_right = 176.0
margin_bottom = -108.58
custom_fonts/font = SubResource( 2 )
text = "您的得分"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="OverPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -50.0
margin_right = 176.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( -1424.88, -394.069 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClosedButton" type="Button" parent="OverPanel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -53.0229
margin_right = -8.02295
margin_bottom = 63.0
custom_fonts/font = SubResource( 3 )
text = "X"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="OverPanel/ClosedButton" to="." method="_on_ClosedButton_pressed"]
